Implement basic authentication by hooking callback function UserSecurityAuth() instead of using middleware
